fixed fixed nav not scrolling when screen too short

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -396,7 +396,10 @@ footer p {
     max-width: 25%;
     position: fixed;
     z-index: 10;
-    max-height: 90vh;
+    max-height: 95vh;
+    margin: 0;
+    overflow: auto;
+    padding-right: 1em;
   }
 
   nav {
