--- a/resources/sass/_responsive.sass
+++ b/resources/sass/_responsive.sass
@@ -15,7 +15,10 @@
 		max-width: 25%
 		position: fixed
 		z-index:10
-		max-height: 90vh
+		max-height: 95vh
+		margin: 0
+		overflow: auto
+		padding-right: 1em
 
 	nav
 		display: none
